2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to Run-1 OLR

2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Increase MuJetPtRatio and MuJetTrkPtRatio to 100000 to eliminate these requirements from ASG OLR

2016-09-30 Robert Wolff <robert.wolff@cern.ch>
	* Bugfix for running on data

2016-06-29 Harish Potti <harish.potti@cern.ch>
	* Move to AnalysisTop, 2.4.13
	* Update grid submission scripts

2016-06-29 Robert Wolff <robert.wolff@cern.ch>
	* Muon ICHEP recommendations
	* Instructions for new b-tagging CDI file
	* latest TauAnalysisTools
	* latest Electron recommendation
	* SF for 77% b-tagging WP

2016-06-28 Marco Sessa <marco.sessa@cern.ch>
	* Add new MET variables in the output tree: sumet, softTrk_et, softTrk_phi, softClus_et, softClus_phi

2016-06-24 Rhys Roberts <rhys.thomas.roberts@cern.ch>
	* Include prompt bdt vars in systematic ntuples

2016-06-23 Peter Onyisi <ponyisi@cern.ch>
	* Update lepton trigger matching
	* Fix Higgs mass hypothesis in xsec files

2016-06-23 Marco Milesi <marco.milesi@cern.ch>
	* Fixing check on ISR/FSR photon for QMisID case
	* Make sure default values for truth branches are assigned correctly

2016-06-23 Robert Wolff <robert.wolff@cern.ch>
	* Working version with AnalysisTop,2.4.12
	* random RunNumber/RunYear for MC from PURW tool

2016-06-09 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Update b-tagging SF nominal and uncertainties function calls
	* Uncomment the PURW instance in data15/16 config (needed by Muon SF tools)
	* Working version with AnalysisTop,2.4.10

2016-06-08  David Hohn  <david.hohn@cern.ch>
	* protect MET_Truth in data
	* overlap flags not working yet
	* tag ttHMultiAna-02-04-06
	** lets follow the AnalysisTop version numbers...

2016-06-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Add more electron 2016 triggers in TRIGDEC in configs
	* Tag ttHMultiAna-00-01-09
